--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -127,7 +127,7 @@
 .project-list__description-wrapper {
   border: 1px solid $portfolio-description-border;
   border-top: none;
-  padding: 20px 24px;
+  padding: 20px 0 20px 24px;
 }
 
 .project-list__title {
